--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </div>
     <canvas id="canvas" class="canvas"></canvas>
     <script src="confetti-js-master/dist/index.min.js"></script>
-    <script src="script.js"></script>
+    <script>
+      let confettiSettings = { target: "canvas" };
+      let confetti = new ConfettiGenerator(confettiSettings);
+      confetti.render();
+    </script>
   </body>
 </html>
